--- a/config/config.yaml
+++ b/config/config.yaml
@@ -11,21 +11,21 @@
       max_thrust: 29.0
       min_thrust: 0.15
       # # Indoor RealSense
-      # external_odom: true
+      external_odom: true
 
   # State Estimator
   state_estimator:
     ros__parameters:
       # Indoor Raw Odometry
-      plugin_name: "raw_odometry"
+      # plugin_name: "raw_odometry"
       # # Indoor RealSense
       # plugin_name: "raw_odometry"
       # odom_topic: "sensor_measurements/realsense/odom"
       # # Indoor Motion Capture
-      # plugin_name: "mocap_pose"
-      # mocap_topic: "/mocap/rigid_bodies"
-      # twist_smooth_filter_cte: 0.1
-      # orientation_smooth_filter_cte: 0.1
+      plugin_name: "mocap_pose"
+      mocap_topic: "/optitrack/rigid_bodies"
+      twist_smooth_filter_cte: 0.1
+      orientation_smooth_filter_cte: 0.1
       # # Outdoor (GPS) Raw Odometry
       # plugin_name: "raw_odometry"
       # use_gps: true
@@ -66,25 +66,36 @@
         yaw: -1.57079632679 # Rotation around z (rad)
 
 # Specific Parameters for each drone
-# drone0:
-#   # Motion Capture
-#   state_estimator:
-#     ros__parameters:
-#       rigid_body_name: "1"
+qav0:
+  # Motion Capture
+  state_estimator:
+    ros__parameters:
+      rigid_body_name: "qav0"
+qav1:
+  # Motion Capture
+  state_estimator:
+    ros__parameters:
+      rigid_body_name: "qav1"
+qav2:
+  # Motion Capture
+  state_estimator:
+    ros__parameters:
+      rigid_body_name: "qav2"
+
 
 # For simulation, specific target_system_id for each drone
-drone0:
+qav0:
   platform:
     ros__parameters:
-      fmu_prefix: /drone0
+      fmu_prefix: /qav0
       target_system_id: 0
-drone1:
+qav1:
   platform:
     ros__parameters:
-      fmu_prefix: /drone1
+      fmu_prefix: /qav1
       target_system_id: 1
-drone2:
+qav2:
   platform:
     ros__parameters:
-      fmu_prefix: /drone2
+      fmu_prefix: /qav2
       target_system_id: 2
